infra/kubernetes/overlays/azure/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gmontinny
  namespace: gmontinny
spec:
  template:
    metadata:
      labels:
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: gmontinny
      containers:
        - name: gmontinny
          resources:
            requests:
              cpu: "500m"
              memory: "768Mi"
            limits:
              cpu: "1500m"
              memory: "1536Mi"
